# Crew_AI

crew_ai_agents/: README.md  pyproject.toml
crew_ai_agents/src/crew_ai_agents/: crew.py  main.py
crew_ai_agents/src/crew_ai_agents/config/: agents.yaml  tasks.yaml
crew_ai_memory/: README.md  pyproject.toml
crew_ai_memory/src/crew_ai_memory/: crew.py  main.py
crew_ai_memory/src/crew_ai_memory/config/: agents.yaml  tasks.yaml
flow_food_review_categorize/: README.md  pyproject.toml
flow_food_review_categorize/src/flow_food_review_categorize/: main.py
flow_food_review_categorize/src/flow_food_review_categorize/crews/bad_feedback/: bad_feedback.py
flow_food_review_categorize/src/flow_food_review_categorize/crews/bad_feedback/config/: agents.yaml  tasks.yaml
flow_food_review_categorize/src/flow_food_review_categorize/crews/good_feedback/: good_feedback.py
flow_food_review_categorize/src/flow_food_review_categorize/crews/good_feedback/config/: agents.yaml  tasks.yaml
flow_food_review_categorize/src/flow_food_review_categorize/crews/neutral_feedback/: neutral_feedback.py
flow_food_review_categorize/src/flow_food_review_categorize/crews/neutral_feedback/config/: agents.yaml  tasks.yaml
market_research_crew/: README.md  pyproject.toml
market_research_crew/src/market_research_crew/: crew.py  main.py
research_and_blog/: README.md  pyproject.toml
research_and_blog/blogs/: blog.md
research_and_blog/src/research_and_blog/: crew.py  main.py
research_and_blog/src/research_and_blog/config/: agents.yaml  tasks.yaml
test_crewai_1/: README.md  pyproject.toml
test_crewai_1/src/test_crewai_1/: crew.py  main.py
test_crewai_1/src/test_crewai_1/config/: agents.yaml  tasks.yaml
union_budget_knowledge/: README.md  pyproject.toml
union_budget_knowledge/src/union_budget_knowledge/: main.py
union_budget_knowledge/src/union_budget_knowledge/crews/budget_or_internet_check_crew/: budget_or_internet_crew.py
union_budget_knowledge/src/union_budget_knowledge/crews/budget_or_internet_check_crew/config/: agents.yaml  tasks.yaml
union_budget_knowledge/src/union_budget_knowledge/crews/budget_response_crew/: budget_crew.py
union_budget_knowledge/src/union_budget_knowledge/crews/budget_response_crew/config/: agents.yaml  tasks.yaml
union_budget_knowledge/src/union_budget_knowledge/crews/internet_response_crew/: internet_crew.py
union_budget_knowledge/src/union_budget_knowledge/crews/internet_response_crew/config/: agents.yaml  tasks.yaml
