[project]
name = "flow_food_review_categorize"
version = "0.1.0"
description = "flow_food_review_categorize using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.2"
]

[project.scripts]
kickoff = "flow_food_review_categorize.main:kickoff"
run_crew = "flow_food_review_categorize.main:kickoff"
plot = "flow_food_review_categorize.main:plot"
run_with_trigger = "flow_food_review_categorize.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
